<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/purple_200">


    <Button
        android:id="@+id/button"
        android:layout_width="125dp"
        android:layout_height="63dp"
        android:layout_marginStart="143dp"
        android:layout_marginEnd="143dp"
        android:layout_marginBottom="24dp"
        android:onClick="showResult"
        android:text="@string/text_for_button_ok"
        app:layout_constraintBottom_toTopOf="@+id/textView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <RadioGroup
        android:id="@+id/type"
        android:layout_width="170dp"
        android:layout_height="151dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="24dp"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintVertical_bias="0.875">

        <RadioButton
            android:id="@+id/theoretical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="false"
            android:text="@string/type_theoretical" />

        <RadioButton
            android:id="@+id/practice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="false"
            android:text="@string/type_practice" />
    </RadioGroup>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="173dp"
        android:layout_height="61dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:text="@string/type_task"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextMultiLine2" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="172dp"
        android:layout_height="61dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:text="@string/level_difficulty"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextMultiLine2" />

    <RadioGroup
        android:id="@+id/difficulty"
        android:layout_width="171dp"
        android:layout_height="151dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="24dp"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.875">

        <RadioButton
            android:id="@+id/easy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="false"
            android:text="@string/level_easy" />

        <RadioButton
            android:id="@+id/average"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="false"
            android:text="@string/level_average" />

        <RadioButton
            android:id="@+id/high"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="false"
            android:minHeight="48dp"
            android:text="@string/level_high" />
    </RadioGroup>

    <EditText
        android:id="@+id/editTextTextMultiLine2"
        android:layout_width="360dp"
        android:layout_height="84dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:autofillHints="Ви забули ввести завдання"
        android:background="@color/white"
        android:ems="10"
        android:gravity="start|top"
        android:inputType="textMultiLine"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        tools:ignore="LabelFor" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="360dp"
        android:layout_height="82dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="48dp"
        android:text="@string/result"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="30dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="41dp" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="360dp"
        android:layout_height="44dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="30dp"
        android:text="@string/enter_question"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>